[package]
authors = ["USAGI.NETWORK / Usagi Ito <the@usagi.network>"]
categories = ["encoding"]
description = "Implementation of a map tile retriever for 'Chi-ri-in-tile' ('地理院タイル'; ja-JP) of 'Geospatial Information Authority of Japan' (GSI)."
documentation = "https://docs.rs/gsi"
edition = "2018"
keywords = ["gsi", "maptiles", "cocotile", "layers", "dem", "gsimaps"]
license = "MIT"
name = "gsi"
readme = "README.md"
repository = "https://github.com/usagi/gsi"
version = "1.0.0"

[features]
default = ["layers"]
layers = ["serde", "serde_json", "futures", "strip_bom"]

[dependencies]
futures = {version = "0.3.5", optional = true}
gsj = "1.0.0"
image = "0.23.9"
serde = {version = "1.0.115", features = ["derive"], optional = true}
serde_json = {version = "1.0.57", optional = true}
strip_bom = {version = "1.0.0", optional = true}
surf = "1.0.3"
thiserror = "1.0.20"

[dev-dependencies]
smol = "1.0.0" # for use to the unit test
